Replaced Pre built dlls with ProjectReference.

--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Droid/DemoApp.Droid.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Droid/DemoApp.Droid.csproj
@@ -54,9 +54,6 @@
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Export" />
     <Reference Include="mscorlib" />
-    <Reference Include="PharmaSupply">
-      <HintPath>..\Pre-BuiltDLLS\monoandroid11.0\PharmaSupply.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -94,6 +91,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Styles.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\UnoPharmaSupply\UnoPharmaSupply\UnoPharmaSupply.csproj">
+      <Project>{749e7b62-af0c-4b0b-8d62-5b8d7962a2e3}</Project>
+      <Name>UnoPharmaSupply</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\DemoApp.Shared\DemoApp.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
