--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Wasm/DemoApp.Wasm.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Wasm/DemoApp.Wasm.csproj
@@ -45,9 +45,7 @@
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="PharmaSupply">
-      <HintPath>..\Pre-BuiltDLLS\netstandard2.0\PharmaSupply.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\..\UnoPharmaSupply\UnoPharmaSupply\UnoPharmaSupply.csproj" />
   </ItemGroup>
   <Import Project="..\DemoApp.Shared\DemoApp.Shared.projitems" Label="Shared" Condition="Exists('..\DemoApp.Shared\DemoApp.Shared.projitems')" />
 </Project>
