--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
@@ -148,9 +148,10 @@
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="PharmaSupply">
-      <HintPath>..\Pre-BuiltDLLS\uap10.0.17763\PharmaSupply.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\..\UnoPharmaSupply\UnoPharmaSupply\UnoPharmaSupply.csproj">
+      <Project>{749e7b62-af0c-4b0b-8d62-5b8d7962a2e3}</Project>
+      <Name>UnoPharmaSupply</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\DemoApp.Shared\DemoApp.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
