--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
@@ -8,14 +8,20 @@
       you need to make sure that the version provided here matches https://github.com/novotnyllc/MSBuildSdkExtras/blob/main/Source/MSBuild.Sdk.Extras/DefaultItems/ImplicitPackages.targets#L11.
       This is not an issue when libraries are referenced through nuget packages. See https://github.com/unoplatform/uno/issues/446 for more details.
       -->
-      <Version>6.2.12</Version>
+      <Version>6.2.9</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml" Version="2.5.0" />
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>7.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml" Version="2.6.1" />
     <PackageReference Include="Nethereum.Web3">
       <Version>3.8.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
+    <PackageReference Include="Uno.Core" Version="2.4.0" />
+    <PackageReference Include="Uno.Material">
+      <Version>1.0.0-dev.788</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI" Version="3.8.13" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
   </ItemGroup>
