--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.iOS/DemoApp.iOS.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.iOS/DemoApp.iOS.csproj
@@ -119,10 +119,13 @@
     <PackageReference Include="Nethereum.Web3">
       <Version>3.8.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Material">
+      <Version>1.0.0-dev.788</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI" Version="3.8.13" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.13" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.0.1" />
+    <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
