--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
@@ -5,7 +5,6 @@
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
     <MonoRuntimeDebuggerEnabled Condition="'$(Configuration)'=='Debug'">true</MonoRuntimeDebuggerEnabled>
-    <WasmShellMonoRuntimeExecutionMode Condition="'$(Configuration)'=='Release'">InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>
 		<UnoUIUseRoslynSourceGenerators>false</UnoUIUseRoslynSourceGenerators>
 		<WasmShellILLinkerEnabled>false</WasmShellILLinkerEnabled>
 	</PropertyGroup>
@@ -21,10 +20,6 @@
 	</ItemGroup>
 	<ItemGroup>
     <LinkerDescriptor Include="LinkerConfig.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <!-- Required to enable IDBFS (https://github.com/emscripten-core/emscripten/blob/d2148d096e2b5f3ec4886f93e24312ef88976020/ChangeLog.md#v1391-10302019) -->
-    <WasmShellExtraEmccFlags Include="-lidbfs.js" />
   </ItemGroup>
   <ItemGroup>
     <!-- 
@@ -44,11 +39,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.80.3-preview.93" />
     <PackageReference Include="SkiaSharp.Views.Uno" Version="2.80.3-preview.93" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.WebAssembly" Version="3.7.4" />
+		<PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
-  </ItemGroup>
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="3.0.0-dev.138" />
+		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.0.0-dev.138" />
+	</ItemGroup>
   <Import Project="..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems" Label="Shared" Condition="Exists('..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems')" />
 </Project>
