--- a/.vsts-ci.canaries.yml
+++ b/.vsts-ci.canaries.yml
@@ -2,7 +2,7 @@ steps:
 - pwsh: |
     git merge origin/master -s recursive -X theirs
     $savedMSBuildExtensionsPath = $env:MSBuildExtensionsPath
-    $env:MSBuildExtensionsPath = 'C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\MSBuild'
+    $env:MSBuildExtensionsPath = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild'
     dotnet new sln --name=Uno.Samples.generated
     dotnet sln Uno.Samples.generated.sln add (Get-ChildItem -Recurse *.csproj)
     $env:MSBuildExtensionsPath = $savedMSBuildExtensionsPath
