--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Skia.Gtk/Authentication.OidcDemo.Skia.Gtk.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Skia.Gtk/Authentication.OidcDemo.Skia.Gtk.csproj
@@ -16,10 +16,11 @@
   <ItemGroup>
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <Import Project="..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems" Label="Shared" />
 </Project>
