--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Wasm/Authentication.OidcDemo.Wasm.csproj
@@ -37,14 +37,15 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
-    <PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="IdentityModel.OidcClient" Version="3.1.2" /> 
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
   </ItemGroup>
   <Import Project="..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems" Label="Shared" Condition="Exists('..\Authentication.OidcDemo.Shared\Authentication.OidcDemo.Shared.projitems')" />
 </Project>
