--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.macOS/UnoChat.Client.macOS.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.macOS/UnoChat.Client.macOS.csproj
@@ -77,12 +77,13 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Uno.UI.Lottie">
-      <Version>3.7.4</Version>
+      <Version>4.1.9</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
   <Import Project="..\UnoChat.Client.Shared\UnoChat.Client.Shared.projitems" Label="Shared" Condition="Exists('..\UnoChat.Client.Shared\UnoChat.Client.Shared.projitems')" />
   <ItemGroup>
