chore: EmbeddedResourcesSample Uno 4.1.9

--- a/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.UWP/EmbeddedResourcesSample.UWP.csproj
+++ b/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.UWP/EmbeddedResourcesSample.UWP.csproj
@@ -10,15 +10,15 @@
 			-->
       <Version>6.2.9</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>106890dc-4e36-41fc-8406-d29d693703df</ProjectGuid>
+    <ProjectGuid>{106890DC-4E36-41FC-8406-D29D693703DF}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EmbeddedResourcesSample</RootNamespace>
