--- a/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Skia.Tizen/EmbeddedResourcesSample.Skia.Tizen.csproj
+++ b/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Skia.Tizen/EmbeddedResourcesSample.Skia.Tizen.csproj
@@ -19,12 +19,12 @@
     <UpToDateCheckInput Include="..\EmbeddedResourcesSample.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="SkiaSharp.Views" Version="2.80.2" />
-    <PackageReference Include="Uno.UI.Skia.Tizen" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="SkiaSharp.Views" Version="2.80.3" />
+    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <Import Project="..\EmbeddedResourcesSample.Shared\EmbeddedResourcesSample.Shared.projitems" Label="Shared" />
 </Project>
