--- a/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Skia.Wpf/EmbeddedResourcesSample.Skia.Wpf.csproj
+++ b/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Skia.Wpf/EmbeddedResourcesSample.Skia.Wpf.csproj
@@ -5,11 +5,11 @@
     <RootNamespace>EmbeddedResourcesSample</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\EmbeddedResourcesSample.Shared\**\*.xaml" />
