--- a/UI/HtmlControls/HtmlControls/HtmlControls.csproj
+++ b/UI/HtmlControls/HtmlControls/HtmlControls.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.10.0-dev.617" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
   </ItemGroup>
 
 </Project>
