--- a/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.UWP/UnoLocalization.Uwp.csproj
+++ b/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.UWP/UnoLocalization.Uwp.csproj
@@ -10,15 +10,15 @@
       -->
       <Version>6.2.11</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.UI" Version="3.7.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>92571acd-60e2-4c47-aa87-6d912cb634be</ProjectGuid>
+    <ProjectGuid>{92571ACD-60E2-4C47-AA87-6D912CB634BE}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnoLocalization</RootNamespace>
